[package]
name = "rlisp"
version = "0.2.0"
edition = "2021"
authors = ["Mohsen Alizadeh"]
description = "experimental lisp interpreter in rust"
homepage = "https://github.com/mohsen-alizadeh/rlisp"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
